tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_u16_array_size/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:7:21
  │
7 │         let fields: [Field; N] = [0; N];
  │                     ---------- expected `u32`, found `u16`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:7:38
  │
7 │         let fields: [Field; N] = [0; N];
  │                                      - expected `u32`, found `u16`
  │

Aborting due to 2 previous errors
