tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_u16_array_size/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:7:21
  │
7 │         let fields: [Field; N] = [0; N];
  │                     ---------- expected `u32`, found `u16`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:7:38
  │
7 │         let fields: [Field; N] = [0; N];
  │                                      - expected `u32`, found `u16`
  │

Aborting due to 2 previous errors
